testsuite/tests/interpreter_errors/combine_recurs_to_invalid_type/test.out
error: Unsupported operation: Int & Int
script.lkql:2:7 in script.lkql
  2 | print({a: 1}.combine({a: 2}))
    |       ^^^^^^^^^^^^^^^^^^^^^^
